--- a/node/package.json
+++ b/node/package.json
@@ -9,13 +9,14 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "mysql2": "^3.2.0",
+    "helmet": "^7.0.0",
     "joi": "^17.9.2",
-    "helmet": "^7.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
