--- a/node/package.json
+++ b/node/package.json
@@ -1,8 +1,9 @@
 {
   "name": "livraria-backend",
   "version": "1.0.0",
-  "description": "Backend para livraria (MySQL)",
+  "description": "Backend para livraria (MySQL + MongoDB)",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
@@ -16,7 +17,8 @@
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
-    "mysql2": "^3.2.0"
+    "mysql2": "^3.2.0",
+    "mongoose": "^8.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
