--- a/node/package.json
+++ b/node/package.json
@@ -16,6 +16,7 @@
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
+    "mongoose": "^8.19.4",
     "mysql2": "^3.2.0"
   },
   "devDependencies": {
